--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@ body {
   color: #1E384D;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 code {
